--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,6 @@
     <string name="ok">OK</string>
     <string name="camera_permission_not_available">Permission is not available. Requesting camera permission.</string>
     <string name="camera_permission_available">Camera permission is available. Starting preview.</string>
-    <string name="camera_permission_granted">Camera permission was granted. Starting preview.</string>
+    <string name="camera_permission_granted">Bluetooth permission was granted.</string>
     <string name="camera_permission_denied">Camera permission request was denied.</string>
 </resources>
