--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="camera_permission_granted">Bluetooth permission was granted.</string>
     <string name="camera_permission_denied">Camera permission request was denied.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="colorList">
+        <item>Blue</item>
+        <item>Red</item>
+        <item>Green</item>
+        <item>Side Walk</item>
+    </string-array>
 </resources>
