--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="camera_permission_granted">Bluetooth permission was granted.</string>
     <string name="camera_permission_denied">Camera permission request was denied.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="uuid">00001101-0000-1000-8000-00805F9B34FB</string>
 </resources>
