--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="AsaProject">Asa010311</string>
+    <string name="AsaProject">Asa010526</string>
     <string name="Bluetooth_Address">98:D3:31:F9:96:D2</string>
     <string name="Bluetooth_AddressGuitar">98:D3:61:F6:05:D0</string>
     <string name="Bluetooth_AddressNew">98:D3:21:F7:74:AB</string>
@@ -13,4 +13,13 @@
     <string name="camera_permission_denied">Camera permission request was denied.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="uuid">00001101-0000-1000-8000-00805F9B34FB</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 </resources>
